# loot-de-ofertas

./: .env.example  .gitignore  CONTROLE DO PROJETO.bat  README.md  controle-projeto.ps1  pyproject.toml  render.yaml
docs/oauth/callback/: index.html
examples/: ofertas.csv
loot_ofertas/: __init__.py  capture.py  cli.py  config.py  coupons.py  dashboard.html  database.py  formatting.py  identity.py  importers.py  magalu.py  market.py  marketing.py  meli.py  meli_discovery.py  models.py  product_catalog.py  publishers.py  scheduling.py  scoring.py  webapp.py  wppconnect.py
scripts/: run_dashboard.ps1  run_monitor.ps1
tests/: test_capture.py  test_coupons.py  test_magalu.py  test_market.py  test_marketing.py  test_meli.py  test_meli_discovery.py  test_publish_ranking.py  test_queue.py  test_scoring.py  test_webapp.py  test_wppconnect.py
